[package]
name = "TurtleShare"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.6.0-rc.8", features = ["password-hash", "rand_core"] }
axum = { version = "0.8.8", features = ["json", "macros", "tokio", "http1", "http2", "multipart"] }
base64 = "0.22.0"
harsh = "0.2.2"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
password-hash = "0.6.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
